@@ -4,6 +4,7 @@
     * Add Drupal migrator (#245)
     * Complain about YAML and Liquid errors (#249)
     * Remove orphaned files during regeneration (#247)
+    * Add Marley migrator (#28)
 
 == 0.8.0 / 2010-11-22
   * Minor Enhancements
